<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteFile"
            android:text="@string/deleteFile" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startOneTimeWorkRequest"
            android:text="@string/startOneTimeWorkRequest" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startPeriodicWorkRequest"
            android:text="@string/startPeriodicWorkRequest" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelPeriodicWorkRequest"
            android:text="@string/cancelPeriodicWorkRequest" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startContinuation"
            android:text="@string/startContinuation" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startMultiContinuation"
            android:text="@string/startMultiContinuation" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startConstraints"
            android:text="@string/startConstraints" />
    </LinearLayout>
</ScrollView>