<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_class" />

        <Button
            android:id="@+id/text2"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/add10student" />

        <Button
            android:id="@+id/text3"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/add_student" />

        <Button
            android:id="@+id/text4"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/del_all_stu" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/content_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>